Fix input spacing on form when screen reduced to iphone 5 size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -299,7 +299,7 @@ li label {
 
 .input {
     background: #d7d7d7;
-    width: 90%;
+    width: 80%;
     padding: 5px 10px 2px 10px;
     font-family: inherit;
 }
@@ -399,6 +399,10 @@ li label {
     .img-outer {
         width: 400px;
         height: 400px;
+    }
+
+    .input {
+        width: 90%;
     }
 }
 
